# finops-iac

./: .env.example  Dockerfile  README.md  conda-environment.yml  pyproject.toml  workflow-dev.sh
.github/workflows/: ci.yml
config/: feature_definitions.yaml  production.yaml  settings.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: api_reference.md  architecture_decision_record.md
examples/: real_time_inference.py
github-actions/: cost-check.yml
helm/: values.yaml
helm/templates/: deployment.yaml
kubernetes/: voice-feature-store.yaml
kubernetes/advanced/: production-setup.yaml
scripts/: deploy_production.sh  emergency_recovery.py  operational_dashboard.py  performance_test.py  produce_test_audio.py  start_services.sh
src/: main.py
src/voice_feature_store/api/: advanced_endpoints.py  ml_server.py  server.py
src/voice_feature_store/features/: advanced_features.py  feature_registry.py  voice_features.py
src/voice_feature_store/ml/: model_serving.py  training_pipeline.py
src/voice_feature_store/monitoring/: __init__.py  alerting.py
src/voice_feature_store/optimization/: caching.py  performance_tuning.py
src/voice_feature_store/quality/: validators.py
src/voice_feature_store/security/: authentication.py  rate_limiting.py
src/voice_feature_store/storage/: offline_store.py  online_store.py
src/voice_feature_store/streaming/: flink_processor.py  stateful_processing.py  windowed_aggregations.py
tests/: conftest.py  test_api.py  test_online_store.py  test_voice_features.py
tutorial/: content.md
(+3 files in other folders)
